fix misalignment

--- a/src/atoms/main-menu/_main-menu.scss
+++ b/src/atoms/main-menu/_main-menu.scss
@@ -69,6 +69,7 @@
 			font-size: rem($size-small);
 			text-decoration: none;
 			-webkit-appearance: none;
+			line-height: 1;
 
 			&:focus,
 			&:hover {
